src/objects/ADvendio__Assigned_Mailing_list__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Contact__c</fullName>
        <description>This reference displays the assigned contact.</description>
        <inlineHelpText>This reference displays the assigned contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assigned Mailing lists</relationshipLabel>
        <relationshipName>Assigned_Mailing_lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Mailing_list__c</fullName>
        <description>This reference displays the assigned mailing list.</description>
        <inlineHelpText>This reference displays the assigned mailing list.</inlineHelpText>
        <label>Mailing list</label>
        <referenceTo>ADvendio__Mailing_List__c</referenceTo>
        <relationshipLabel>Assigned Contacts</relationshipLabel>
        <relationshipName>Assigned_Mailing_lists</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Assigned Mailing list</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AML{000000}</displayFormat>
        <label>Assigned Mailing list Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Mailing lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>